src/ui/snapshots/gitt__ui__status__tests__cmt_01_commit_editor_empty_snapshot.snap
---
source: src/ui/status.rs
assertion_line: 381
expression: "render_to_string(&s, 80, 12)"
---
 feature (status)   4 changed · 2 staged
A  src/status.rs
 M src/reducer.rs
MM src/ui/mod.rs
?? notes.t┌ Commit ──────────────────────────────────────────────────┐
          │ █                                                        │
          │ Enter send · S suggest · Esc cancel                      │
          └──────────────────────────────────────────────────────────┘



j/k · space stage · S/U all · c commit · a amend · d/D discard · Tab diff · q qu
