src/ui/snapshots/gitt__ui__status__tests__cmt_03_commit_editor_typed_snapshot.snap
---
source: src/ui/status.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (status)   4 changed · 2 staged
A  src/status.rs
 M src/reducer.rs
MM src/ui/mod.rs
?? notes.t┌ Commit ──────────────────────────────────────────────────┐
          │ Add the commit editor█                                   │
          │ Enter  commit    Ctrl-s  suggest    Esc  cancel          │
          └──────────────────────────────────────────────────────────┘



j/k · space stage · c commit · a amend · d discard · Tab diff · Enter · q quit
