src/ui/snapshots/gitt__ui__status__tests__cmt_06_commit_editor_suggesting_snapshot.snap
---
source: src/ui/status.rs
assertion_line: 414
expression: "render_to_string(&s, 80, 12)"
---
 feature (status)   4 changed · 2 staged
A  src/status.rs
 M src/reducer.rs
MM src/ui/mod.rs
?? notes.t┌ Commit ──────────────────────────────────────────────────┐
          │ suggesting…                                              │
          │ Enter send · Esc cancel                                  │
          └──────────────────────────────────────────────────────────┘



j/k · space stage · S/U all · c commit · a amend · d/D discard · Tab diff · q qu
