src/ui/snapshots/gitt__ui__status__tests__loading_snapshot.snap
---
source: src/ui/status.rs
assertion_line: 288
expression: "render_to_string(&s, 80, 8)"
---
 main (status)   0 changed · 0 staged
Loading…





j/k move · space stage/unstage · d discard · Tab diff · Enter actions · R reload
