src/ui/snapshots/gitt__ui__status__tests__stat_01_list_snapshot.snap
---
source: src/ui/status.rs
assertion_line: 319
expression: "render_to_string(&s, 80, 12)"
---
 feature (status)   4 changed · 2 staged
A  src/status.rs
 M src/reducer.rs
MM src/ui/mod.rs
?? notes.txt






j/k · space stage · S/U all · c commit · a amend · d/D discard · Tab diff · q qu
