src/ui/snapshots/gitt__ui__status__tests__stat_07_confirm_snapshot.snap
---
source: src/ui/status.rs
assertion_line: 271
expression: "render_to_string(&s, 80, 12)"
---
 feature (status)   4 changed · 2 staged
A  src/status.rs
 M src/reducer.rs
MM src/ui/mod.rs
?? notes.txt              ┌ Discard? ───────────────┐
                          │ Delete notes.txt?       │
                          │ y  discard    n  cancel │
                          └─────────────────────────┘



j/k move · space stage/unstage · d discard · Tab diff · Enter actions · R reload
