src/ui/snapshots/gitt__ui__status__tests__stat_09_menu_snapshot.snap
---
source: src/ui/status.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (status)   4 changed · 2 staged
A  src/status.rs
 M src/reducer.rs
MM src/ui/mod.rs              ┌ src/reducer.rs ──┐
?? notes.txt                  │ Stage            │
                              │ Discard changes  │
                              │ Copy path        │
                              └──────────────────┘



j/k · space stage · c commit · a amend · d discard · Tab diff · Enter · q quit
