src/ui/snapshots/gitt__ui__status__tests__stat_14_clean_snapshot.snap
---
source: src/ui/status.rs
assertion_line: 280
expression: "render_to_string(&s, 80, 8)"
---
 main (status)   0 changed · 0 staged
nothing to commit, working tree clean





j/k move · space stage/unstage · d discard · Tab diff · Enter actions · R reload
